Добавил DTO